# algolab

./: .gitignore  LICENSE  README.md  algolabVS.sh
problems/week01-build_the_sum/: README.md
problems/week01-dominoes/: README.md
problems/week01-even_matrices/: README.md
problems/week01-even_pairs/: README.md
problems/week02-beach_bars/: README.md
problems/week02-burning_coins/: README.md
problems/week02-defensive_line/: README.md
problems/week02-potw-deck_of_cards/: README.md
problems/week02-the_great_game/: README.md
problems/week04-potw-fighting_pits_mereen/: README.md
problems/week05-asterix_the_gaul/: README.md
problems/week05-severus_snape/: README.md
problems/week07-coin_tossing/: README.md
problems/week07-knights/: README.md
problems/week07-london/: README.md
problems/week07-potw-octopussy/: README.md
problems/week07-shopping_trip/: README.md
problems/week08-h1n1/: CMakeLists.txt  README.md
problems/week08-light_the_stage/: README.md
problems/week08-potw-suez/: README.md
problems/week10-asterix_and_the_chariot_race/: README.md
problems/week10-potw-goldeneye/: README.md
problems/week11-asterix_and_the_legions/: README.md
problems/week11-idefix/: README.md
problems/week11-return_of_the_jedi/: README.md
problems/week11-the_iron_islands/: README.md
problems/week12-bonus_level/: README.md
problems/week12-car_sharing/: README.md
problems/week12-dean_thomas/: README.md
problems/week12-hong_kong/: README.md
problems/week12-majestys_secret_service/: README.md
problems/week12-potw-san_francisco/: README.md
(+81 files in other folders)
